Bug 137675 - FILESAVE PPTX Non-filled non-custom shape is saved with extra fill
Summary: FILESAVE PPTX Non-filled non-custom shape is saved with extra fill
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords:
Depends on:
Blocks: Shape-ODF-OOXML-export
  Show dependency treegraph
 
Reported: 2020-10-22 12:08 UTC by NISZ LibreOffice Team
Modified: 2022-03-14 08:09 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
The original attachment #126406 saved by Impress - good (20.73 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-10-22 12:08 UTC, NISZ LibreOffice Team
Details
The exported file saved again by Impress - bad (20.19 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-10-22 12:08 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Impress (52.64 KB, image/png)
2020-10-22 12:08 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-22 12:08:03 UTC
Created attachment 166621 [details]
The original attachment #126406 [details] saved by Impress - good

This is a followup to bug #101122
When the original odp file is saved to pptx, the shape now correctly does not get a fill, but if that file is saved again, the line shape gets an extra fill.

Steps to reproduce:
    1. Open attachment #166346 [details] 
    2. Save as pptx, reload, save again as pptx

Actual results:
The sine curve gets a fill color.

Expected results:
No fill color.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: e0c72e31c1d455c26110c35e8780d420e17cdea6
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-10-22 12:08:24 UTC
Created attachment 166622 [details]
The exported file saved again by Impress - bad
Comment 2 NISZ LibreOffice Team 2020-10-22 12:08:49 UTC
Created attachment 166623 [details]
Screenshot of the original and exported document side by side in Impress
Comment 3 wingednova 2020-11-05 06:22:03 UTC
Works for me, 
Version: 7.0.3.1 (x64)
Build ID: d7547858d014d4cf69878db179d326fc3483e082
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

I've changed status to resolved, feel free to change it back if the bug still persists.
Comment 4 wingednova 2020-11-14 09:12:07 UTC
(In reply to wingednova from comment #3)
> Works for me, 
> Version: 7.0.3.1 (x64)
> Build ID: d7547858d014d4cf69878db179d326fc3483e082
> CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: Skia/Vulkan; VCL:
> win
> Locale: en-US (en_US); UI: en-US
> Calc: threaded
> 
> I've changed status to resolved, feel free to change it back if the bug
> still persists.

sorry, changed back to unconfirmed. I wasn't sure of the worksforme requirements.
Comment 5 Xisco Faulí 2020-12-07 17:27:46 UTC
Reproduced in

Version: 7.2.0.0.alpha0+
Build ID: 84af20ef3ea72190784e9e7be820684c2558ba8c
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

and

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
Comment 6 Commit Notification 2022-02-02 10:37:42 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/22b66d4083d34cbce2b7b48daeed3152bf9877b7

tdf#137675 PPTX export: adding missing fill="none" to a:path

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-02-03 09:05:52 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/59b16fdf4e25db134ed52457c857eae5241a75e5

tdf#137675 PPTX export: adding missing fill="none" to a:path

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2022-02-14 07:37:55 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 42c5506a9e9ef58efd8193a193464e3b49d481ca
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded