tdf#137675 PPTX export: adding missing fill="none" to a:path

Follow-up to commit 9310e47e2ce71348a16e5412131946348833f4b2
"tdf#101122 DOCX custom shape export: remove bad fill".

Change-Id: I2acdae3964c31ee366387d9938fe366405dcace9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/127944
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>